fixed missing padding top on second

--- a/second/index.css
+++ b/second/index.css
@@ -13,6 +13,7 @@ body {
     align-items: flex-end;
     padding-left: 10px;
     padding-bottom: 1%;
+    padding-top: 10px;
     margin-bottom: 10px;   
     
    
